Add footer and hover animation for index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,17 +15,10 @@ body {
     color: black;
 }
 
-.hm {
-    background-color: grey;
-}
-
 .offcanvas {
     background-color: white;
 }
 
-.link-underline {
-  @apply relative inline-block pb-1
-         after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-blue-500 
-         after:scale-x-0 after:origin-right after:transition-transform after:duration-300 
-         hover:after:scale-x-100 hover:after:origin-left;
+.main-text {
+    font-weight: 400;
 }
