--- a/templates/index.html
+++ b/templates/index.html
@@ -40,17 +40,19 @@
         <div class="container"> 
             <a class="navbar-brand d-md-none" href="#">
                 <svg class="bi" width="24" height="24" aria-hidden="true">
-                    <use xlink:href="#aperture"></use>
+                    <use xlink:href="#"></use>
                 </svg>
-                B.D Akers
+                Logo
             </a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas" aria-label="Toggle navigation"> 
-                <span class="navbar-toggler-icon"></span> 
+                <img src="../assets/svg/hamburger.svg" alt="nav-icon" class="navbar-toggler-icon"> 
             </button> 
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel"> 
                 <div class="offcanvas-header"> 
                     <h5 class="offcanvas-title" id="offcanvasLabel">B.D Akers</h5> 
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button> 
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+                        <img src="../assets/svg/close.svg" alt="nav-close" class="navbar-toggler-icon">
+                    </button> 
                 </div> 
                 <div class="offcanvas-body">
                      <ul class="navbar-nav flex-grow-1 justify-content-between"> 
@@ -78,19 +80,19 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-link relative inline-block pb-1 after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-blue-500 after:scale-x-0 after:origin-right after:transition-transform after:duration-300 hover:after:scale-x-100 hover:after:origin-left" href="#">
-                                Enterprise
+                                Contact
                             </a>
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link nav-link relative inline-block pb-1 after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-blue-500 after:scale-x-0 after:origin-right after:transition-transform after:duration-300 hover:after:scale-x-100 hover:after:origin-left" href="#">
-                                Support
+                                Members
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link nav-link relative inline-block pb-1 after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-full after:h-[2px] after:bg-blue-500 after:scale-x-0 after:origin-right after:transition-transform after:duration-300 hover:after:scale-x-100 hover:after:origin-left" href="#">
                                 Pricing
                             </a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#" aria-label="Cart"> 
                                 <svg class="bi" width="24" height="24" aria-hidden="true">
@@ -110,17 +112,116 @@
                 <img src="#" class="d-block mx-lg-auto img-fluid" alt="Home Picture" width="700" height="500" loading="lazy"> 
             </div> 
             <div class="col-lg-6"> 
-                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Responsive left-aligned hero with image</h1>
-                 <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <h1 class="display-4 fw-bold text-body-emphasis lh-1 mb-3">A Big Headline</h1>
+                 <p class="lead">A brief summary of what a potential client might want. This space, I recommend should be this much of words to capture the one viewing this page. So basically, not too long and not too short, maybe a bit more than this and i think this is fine.</p>
                   <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
                     <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
-                        Primary
+                         View Products
                     </button> 
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button> 
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Get a Quote</button> 
                 </div> 
             </div>
          </div> 
     </div>
+
+    <div class="p-5 text-center bg-body-tertiary"> 
+        <div class="container py-5"> 
+            <h1 class="fw-bold display-4 text-body-emphasis">Our Mission/ What We Do</h1> 
+            <p class="col-lg-8 mx-auto lead">
+                Just a basic summary of what we do and also capturing the main points. We would want to make sure that the user knows what you do in 5 to 10 seconds. Also would want a background image on this.
+            </p> 
+        </div>
+        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">More About Us</button>
+    </div>
+
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary"> 
+        <div class="col-md-6 p-lg-5 mx-auto my-5"> 
+            <h1 class="main-text display-4 fw-bold">Designed for what we promote</h1> 
+            <!-- <h3 class="fw-normal text-muted mb-3">A description of the main products and also a picture to go with it</h3>  -->
+             <p class="col-lg-8 mx-auto lead">A description of the main products and also a picture to go with it</p>
+            <div class="d-flex gap-3 justify-content-center lead fw-normal"> 
+                <a class="icon-link" href="#">
+                    View Products
+                    <svg class="bi" aria-hidden="true">
+                        <use xlink:href="#chevron-right"></use>
+                    </svg> 
+                </a> 
+                <a class="icon-link" href="#">
+                    Enquire
+                    <svg class="bi" aria-hidden="true">
+                        <use xlink:href="#chevron-right"></use>
+                    </svg> 
+                </a> 
+            </div> 
+        </div> 
+        <div class="product-device shadow-sm d-none d-md-block"></div> 
+        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div> 
+    </div>
+
+
+        <!-- footer starts -->
+    <footer class="bg-white-900 text-black-300 py-12">
+        <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-12">
+
+            <!-- Column 1: Brand / About -->
+            <div>
+                <h2 class="text-2xl font-bold text-black mb-4">Logo</h2>
+                <p class="text-sm leading-relaxed text-gray-400">
+                    We build innovative solutions to help you achieve your goals. Just a motto of sort.
+                </p>
+            </div>
+
+                <!-- Column 2: Contact Info -->
+            <div>
+                <h3 class="text-lg font-semibold text-white mb-4">Contact</h3>
+                <ul class="space-y-3">
+                    <li>
+                        <span class="block text-gray-400 text-sm">Phone:</span>
+                        <a href="tel:+1234567890" class="nav-link relative inline-block pb-1 after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-1/2 after:h-[2px] after:bg-blue-500 after:scale-x-0 after:origin-right after:transition-transform after:duration-300 hover:after:scale-x-100 hover:after:origin-left">
+                            +1 234 567 890
+                        </a>
+                    </li>
+                    <li>
+                        <span class="block text-gray-400 text-sm">Email:</span>
+                        <a href="mailto:info@mybrand.com" class="hover:text-white">info@company.com</a>
+                    </li>
+                    <li>
+                        <span class="block text-gray-400 text-sm">Address:</span>
+                        <a href="#" class="text-gray-400">
+                            123 Innovation Street<br>
+                            Abuja, Nigeria
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+                    <!-- Column 3: Links -->
+            <div>
+                <h3 class="text-lg font-semibold text-white mb-4">Quick Links</h3>
+                <ul class="space-y-3">
+                    <li>
+                        <a href="#about" class="hover:text-white">
+                        About Us
+                        </a>
+                    </li>
+                    <li><a href="#services" class="hover:text-white">Products</a></li>
+                    <li><a href="#careers" class="hover:text-white">Careers</a></li>
+                    <li><a href="#contact" class="hover:text-white">Contact</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+            <!-- Bottom -->
+        <div class="text-center fw-normal mt-12 border-t border-gray-700 pt-6">
+            &copy; <span id="year"></span> CompanyName. All rights reserved.
+        </div>
+    </footer>
+
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 </html>
