Adjust the responsive button from the hero section

--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
             <div class="col-lg-6"> 
                 <h1 class="display-4 fw-bold text-body-emphasis lh-1 mb-3">A Big Headline</h1>
                  <p class="lead">A brief summary of what a potential client might want. This space, I recommend should be this much of words to capture the one viewing this page. So basically, not too long and not too short, maybe a bit more than this and i think this is fine.</p>
-                  <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
+                  <div class="d-grid gap-2 d-md-flex col-6 mx-auto sm-auto mx-md-0 justify-content-md-start"> 
                     <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
                          View Products
                     </button> 
