--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,10 +9,10 @@ body {
 
 .nav-link {
     color: black;
-}
 
-.nav-link:hover {
-    color: black;
+    &:hover {
+        color: black;
+    }
 }
 
 .offcanvas {
